# sepio-classifier

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
src/: logging_config.py  main.py
src/firebase/: firebase.py
src/models/: KnowledgeBaseItem.py  MacAddress.py  Override.py  RedisEvent.py  UpdateClassification.py  UpdateVendor.py
src/redis/: EventRegister.py  redis.py
src/repository/: KnowledgeBaseItem.py  Override.py
src/routes/: Classifier.py  Redis.py
src/service/: Classifier.py
src/utils/functions/: AddressIsInRange.py  HexidecimalToDecimal.py
